--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,17 +1,18 @@
 body {
-  background-color: rgba(212, 224, 239, 255);
+  background-color: hsl(212, 45%, 89%);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
 .qr-code-card{
-  width: 350px;
+  width: 300px; 
   display: flex;
   flex-direction: column;
   background-color: white;
-  padding: 20px;
+  padding: 15px;
   align-items: center;
   border-radius: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -31,17 +32,17 @@ body {
 
 .qr-code-card h1{
   text-align: center;
-  font-size: 26px;
+  font-size: 24px;
   font-family: "Outfit", sans-serif;
   font-weight: 700;
-  color: rgba(51, 58, 80, 255);
+  color: hsl(218, 44%, 22%)
 }
 
 .qr-code-card p{
   text-align: center;
-  font-size: 19px;
+  font-size: 16px;
   font-family: "Outfit", sans-serif;
   font-weight: 400;
-  color: rgba(51, 58, 80, 255);
-  opacity: .7;
+  color: hsl(218, 44%, 22%);
+  opacity: 0.6;
 }
